--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "emulator-index",
+  "name": "smartfacecloud-emulator-index",
   "version": "1.1.1",
   "description": "Handles emulator index releated operations",
   "main": "lib/workspace.js",
