--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "crc-32": "^0.3.0",
+    "filequeue": "^0.5.0",
     "global-modules": "^0.2.3",
     "node-uuid": "^1.4.7",
     "project-json-combiner": "*",
